[gd_scene load_steps=10 format=3 uid="uid://bavsq0pxy3drd"]

[ext_resource type="PackedScene" uid="uid://cayabn0jrf6im" path="res://game_container.tscn" id="1_8y3gx"]
[ext_resource type="Script" path="res://new_game.gd" id="1_xvjdm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fcpap"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h4eww"]

[sub_resource type="Theme" id="Theme_reqch"]
Label/colors/font_color = Color(0.592157, 0.592157, 0.592157, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5qwad"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e7rxn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_88m3n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v8cex"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xvjdm")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_fcpap")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="HSplitContainer" type="HSplitContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
split_offset = -200
dragger_visibility = 1

[node name="InfoLineContainer" type="HSplitContainer" parent="PanelContainer/MarginContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.62
dragger_visibility = 1

[node name="InfoPanel" type="Panel" parent="PanelContainer/MarginContainer/HSplitContainer/InfoLineContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.6
theme_override_styles/panel = SubResource("StyleBoxEmpty_h4eww")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HSplitContainer/InfoLineContainer/InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_reqch")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/HSplitContainer/InfoLineContainer/InfoPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Lbl1" type="Label" parent="PanelContainer/MarginContainer/HSplitContainer/InfoLineContainer/InfoPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
text = "Please ignore
the sidebar"

[node name="SavSes" type="Button" parent="PanelContainer/MarginContainer/HSplitContainer/InfoLineContainer/InfoPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_styles/pressed = SubResource("StyleBoxEmpty_5qwad")
theme_override_styles/focus = SubResource("StyleBoxEmpty_e7rxn")
disabled = true
text = "Save Game"
flat = true

[node name="Label" type="ColorRect" parent="PanelContainer/MarginContainer/HSplitContainer/InfoLineContainer"]
custom_minimum_size = Vector2(1, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.4

[node name="Panel2" type="Panel" parent="PanelContainer/MarginContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_88m3n")

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/HSplitContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_v8cex")

[node name="GameContainer" parent="PanelContainer/MarginContainer/HSplitContainer/Panel2/ScrollContainer" instance=ExtResource("1_8y3gx")]
layout_mode = 2

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="ready" from="." to="." method="_on_ready"]
